--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
         <div class="cta-section">
             <h2>Prêt à transformer vos données en décisions ?</h2>
             <p>Planifiez une consultation gratuite de 30 minutes pour discuter de vos besoins</p>
-            <a href="https://calendly.com/votre-lien" class="cta-button" target="_blank">Prendre rendez-vous</a>
+            <a href="https://calendly.com/pascalcote12/30min" class="cta-button" target="_blank">Prendre rendez-vous</a>
         </div>
 
         <div class="profile-section">
