--- a/index.html
+++ b/index.html
@@ -502,6 +502,10 @@
             .contact-link {
                 font-size: 0.9em;
             }
+            .highlight-item {
+            padding: 6px 10px;
+            font-size: 0.85em;
+        }
         }
     @media (max-width: 768px) {
         .profile-container {
