--- a/index.html
+++ b/index.html
@@ -453,13 +453,16 @@
                 font-size: 1.5em;
             }
 
-            .cta-button {
-                padding: 12px 30px;
-                width: 100%;
-                text-align: center;
-                max-width: 300px;
+        
+          .cta-section {
+                padding: 30px 15px;
             }
-
+        
+            .cta-button {
+                width: 90%; /* Largeur relative sur mobile */
+                padding: 12px 20px;
+                font-size: 0.95em;
+            }
             .profile-container {
                 flex-direction: column;
                 text-align: center;
